# ibis-typing

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
.run/: Generate Ibis expression schemas.run.xml  make format fix.run.xml  pytest -m duck.run.xml  pytest -m trino.run.xml  pytest unittest.run.xml
ibis_typing/: __init__.py  checksum_buckets.py  evaluator.py  expression.py  extension_method.py  ibis_adapter.py  ibis_connection.py  ibis_defaults.py  ibis_deferred.py  ibis_extension_method.py  ibis_joins.py  ibis_ops.py  ibis_pyarrow.py  ibis_time.py  ibis_types.py  ibis_utils.py  it.py  naming.py  partitioning.py  revertible.py  schema_bindings.py  schema_writer.py  table_provider.py  table_store.py  utils.py
ibis_typing/custom/: custom_compilers.py  custom_operations.py  op_cast.py
ibis_typing/dbt/: README.md  __init__.py  dbt_ibis_constructor.py  dbt_model.py  dbt_model_resolver.py  dbt_snapshot.py  dbt_sql_compiler.py
ibis_typing/fixtures/: duck_connection.py  expressions.py  fixture_marker.py  ibis_connection.py  ibis_time.py  marks.py  patch_target.py  plugin.py  trino_connection.py
ibis_typing/hypothesis/: __init__.py  strategies.py
ibis_typing/hypothesis/tests/: test_hypothesis_joins.py  test_hypothesis_one_to_many_joins.py  test_hypothesis_transforms.py
ibis_typing/ide/: setup_ide.py
ibis_typing/plot/: __main__.py  graph.py
ibis_typing/plot/columns/: __main__.py
ibis_typing/refactor/: cst.py
ibis_typing/refactor/tests/: test_migrate_ibis_func_to_method.py
ibis_typing/reference/: py_join.py
ibis_typing/samples/: dbt_models.py  sample_incremental_calendar.py  sample_transforms.py
ibis_typing/samples/tests/: test_circle.py  test_generate_ibis_dbt_sql.py  test_generate_ibis_schema_packages.py
ibis_typing/schemagen/: __main__.py
ibis_typing/type_patch/: __main__.py  api.py  arrays.py  generic.py  inspect_types.py  json_.py  logical.py  maps.py  monkeypatch.py  numeric.py  patched_modules.py  patchers.py  relations.py
ide/files/.run/: Template Python tests.run.xml.template
ide/git/hooks/: pre-commit
tests/: conftest.py  test_checksum_buckets.py  test_custom_ops.py  test_ibis_adapter.py  test_ibis_expression.py  test_ibis_joins.py  test_ibis_time.py  test_ibis_utils.py  test_incremental_expression.py  test_parquet_store.py  test_partitioning.py  test_patch_target.py  test_revertible.py  test_type_annotations.py
